# remotebrick

./: CMakeLists.txt  README.md
.reuse/: dep5
android/: AndroidManifest.xml
src/: CMakeLists.txt  bluetoothconnection.cpp  bluetoothconnection.h  icons.qrc  main.cpp  qml.qrc
src/icons/: LICENSE.txt
src/qml/: Commands.js  ConnectingPage.qml  ConnectingPageForm.ui.qml  ControlsView.qml  DeviceList.qml  DeviceListForm.ui.qml  DevicePage.qml  DevicePageForm.ui.qml  SideControlsView.qml  main.qml
src/qml/components/: ActionBinding.qml  PageWithHeader.qml  Toaster.qml
tests/: CMakeLists.txt
tests/bluetooth/: CMakeLists.txt  main.cpp
tests/serial/: CMakeLists.txt  main.cpp
